Add GCP Backup support.

--- a/charts/stardog/templates/statefulset.yaml
+++ b/charts/stardog/templates/statefulset.yaml
@@ -112,13 +112,18 @@ spec:
         - name: {{ include "stardog.fullname" . }}-log4j-vol
           mountPath: /var/opt/stardog/log4j2.xml
           subPath: log4j2.xml
-{{ if .Values.backup.enabled }}
-{{ if eq .Values.backup.provider "azure" }}
+        {{- if .Values.backup.enabled }}
+        {{- if eq .Values.backup.provider "azure" }}
         - name: {{ include "stardog.fullname" . }}-az-backups
           mountPath: /var/opt/stardog-backups 
-{{ end }}
-{{ end }} 
-         
+          readOnly: false
+        {{- end }}
+        {{- if eq .Values.backup.provider "gcp" }}
+        - name: {{ include "stardog.fullname" . }}-gcp-backups
+          mountPath: /var/opt/stardog-backups
+          readOnly: false
+        {{- end }}
+        {{- end }} 
         env:
         - name: PORT
           value: "{{ .Values.ports.server }}"
@@ -195,13 +200,20 @@ spec:
             - key: password
               path: adminpw
               mode: 444
-{{ if .Values.backup.enabled }}
-{{ if eq .Values.backup.provider "azure" }}
+{{- if .Values.backup.enabled }}
+{{- if eq .Values.backup.provider "azure" }}
       - name: {{ include "stardog.fullname" . }}-az-backups
         persistentVolumeClaim:
-          claimName: {{ include "stardog.fullname" . }}-azurefile-bck-pvc 
-{{ end }}
-{{ end }} 
+          claimName: {{ include "stardog.fullname" . }}-azurefile-bck-pvc
+          readOnly: false 
+{{- end }}
+{{- if eq .Values.backup.provider "gcp" }}
+      - name: {{ include "stardog.fullname" . }}-gcp-backups
+        persistentVolumeClaim:
+          claimName: {{ include "stardog.fullname" . }}-gcpfile-bck-pvc
+          readOnly: false 
+{{- end }}
+{{- end }} 
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
   volumeClaimTemplates:
