--- a/charts/stardog/values.yaml
+++ b/charts/stardog/values.yaml
@@ -191,7 +191,7 @@ ingress:
 
 backup:
   enabled: false
-  # provider: azure
+  # provider: azure | gcp
   # azure:
   #   azurestorageaccountkey: 
   #   azurestorageaccountname: 
@@ -200,3 +200,8 @@ backup:
   #     className: azurefile-csi 
   #     resourceGroup: 
   #     shareName:
+  # gcp:
+  #   storage:
+  #     capacity: 1Ti
+  #     path:
+  #     ipAddress:
