Add fix to OSS Changes

--- a/charts/stardog/templates/post-install-job.yaml
+++ b/charts/stardog/templates/post-install-job.yaml
@@ -52,8 +52,10 @@ spec:
           {{ .Files.Get "files/utils.sh" | indent 10 }}
           wait_for_start ${HOST} ${PORT} ${DELAY}
           change_pw ${HOST} ${PORT}
+      {{- if and .Values.image.username .Values.image.password }}
       imagePullSecrets:
       - name: {{ .Release.Name }}-image-pull-secret
+      {{- end}}
       volumes:
       - name: {{ include "stardog.fullname" . }}-password
         secret:
