--- a/charts/stardog/templates/post-install-job.yaml
+++ b/charts/stardog/templates/post-install-job.yaml
@@ -45,7 +45,7 @@ spec:
         - name: DELAY
           value: "{{ .Values.waitForStartSeconds }}"
         command:
-        - /bin/sh
+        - /bin/bash
         - -c
         - |
           set -ex
