--- a/charts/stardog/templates/statefulset.yaml
+++ b/charts/stardog/templates/statefulset.yaml
@@ -65,7 +65,7 @@ spec:
         image: {{ .Values.busybox.image.repository }}:{{ .Values.busybox.image.tag }}
         imagePullPolicy: {{ .Values.busybox.image.pullPolicy }}
         command:
-        - /bin/bash
+        - /bin/sh
         - -c
         - |
         {{ if .Values.zookeeper.enabled }}
